added a method for calculating posts by date